src/objects/DRE__DRE_Result_Group__c.object
<CustomObject>
    <customHelpPage>DRE__DREHelp</customHelpPage>
    <fields>
        <fullName>DRE__Action_Type__c</fullName>
        <label>Action Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__DRE_Rule__c</fullName>
        <label>DRE Rule</label>
        <referenceTo>DRE__DRE_Rule__c</referenceTo>
        <relationshipLabel>Result Groups</relationshipLabel>
        <relationshipName>DRE_Result_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Inner_Scope_Path__c</fullName>
        <label>Object Inner Scope Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Inner_Scope__c</fullName>
        <label>Object Inner Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Earliest</fullName>
                </value>
                <value>
                    <fullName>Latest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Path__c</fullName>
        <label>Object Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Relationship__c</fullName>
        <label>Object Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Object_Scope_Path__c</fullName>
        <label>Object Scope Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Scope__c</fullName>
        <label>Object Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Earliest</fullName>
                </value>
                <value>
                    <fullName>Latest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Remove_From_Recycle_Bin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Delete Record</description>
        <label>Remove From Recycle Bin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Uid__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DRE Result Group</label>
    <nameField>
        <displayFormat>DRERESG-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRE Result Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>